// WordServer.Protos.wordserver.proto
// K.Hira, R.Sweet
// April 4, 2025
// Defines the gRPC service for retrieving the daily Wordle word and validating user guesses.
syntax = "proto3";

option csharp_namespace = "WordServer";

// Provides methods for retrieving the daily Wordle word and validating user guesses.
service DailyWord {
  // Returns the word of the day
  rpc GetWord (GetWordRequest) returns (GetWordResponse);
  // Validates the user's guess
  rpc ValidateWord(ValidateWordRequest) returns (ValidateWordResponse);
}

// Empty request message for retrieving the word of the day.
message GetWordRequest {}

// Response message containing the word of the day.
message GetWordResponse {
  string word = 1;
}

// Request message containing the user's guessed word.
message ValidateWordRequest {
	string word = 1;
}

// Response message indicating whether the user's guess is valid.
message ValidateWordResponse {
  bool correct = 1;
}
